Another big commit ahead of 1.1.0. Added the Dot Sight and Short Stock - both are fully functional and have recipes.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -18,6 +18,9 @@
 	"item.nzgmaddon.muzzle_brake": "Muzzle Brake",
 	"item.nzgmaddon.heavy_muzzle_brake": "Heavy Muzzle Brake",
 	
+	"item.nzgmaddon.dot_sight": "Dot Sight",
+	
+	"item.nzgmaddon.short_stock": "Short Stock",
 	"item.nzgmaddon.dyeable_tactical_stock": "Tactical Stock",
 	"item.nzgmaddon.solid_stock": "Solid Stock",
 	"item.nzgmaddon.stabilizing_stock": "Stabilizing Stock",
