Added Carbine Stock, Extended Barrel, and Marksman Stock. Updated lots of models. Changed stat modifiers for several attachments. Updated en_us.json.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -25,6 +25,7 @@
 	"item.nzgmaddon.solid_stock": "Solid Stock",
 	"item.nzgmaddon.stabilizing_stock": "Stabilizing Stock",
 	"item.nzgmaddon.carbine_stock": "Carbine Stock",
+	"item.nzgmaddon.marksman_stock": "Marksman Stock",
 	
-	"item.nzgmaddon.advanced_grip": "Advanced Grip"
+	"item.nzgmaddon.horizontal_grip": "Horizontal Grip"
 }
