Updated Readme, Changelog, and mods.toml. Updated en_us.json - changed 'Uzi' to 'Micro SMG'; internal ID is unchanged. Changed Submachine Gun model - magazine is now thinner, akin to an MP5 magazine. Corrected Marksman Stock recipe to output the correct item.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -1,6 +1,6 @@
 {
 	"item.nzgmaddon.revolver": "Revolver",
-	"item.nzgmaddon.uzi": "Uzi",
+	"item.nzgmaddon.uzi": "Micro SMG",
 	"item.nzgmaddon.submachine_gun": "Submachine Gun",
 	"item.nzgmaddon.hunting_shotgun": "Hunting Shotgun",
 	"item.nzgmaddon.double_barreled_shotgun": "Double Barreled Shotgun",
