Added the Ballistic Scope. Made some small alterations to the Double Barreled Shotgun's spread stat and the model's GUI position.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -19,6 +19,7 @@
 	"item.nzgmaddon.heavy_muzzle_brake": "Heavy Muzzle Brake",
 	
 	"item.nzgmaddon.dot_sight": "Dot Sight",
+	"item.nzgmaddon.ballistic_scope": "Ballistic Scope",
 	
 	"item.nzgmaddon.short_stock": "Short Stock",
 	"item.nzgmaddon.dyeable_tactical_stock": "Tactical Stock",
