--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"item.nzgmaddon.9a91": "9a-91",
 	"item.nzgmaddon.revolver": "Revolver",
 	"item.nzgmaddon.uzi": "Micro SMG",
 	"item.nzgmaddon.submachine_gun": "Submachine Gun",
