Preliminarily added the Machine Gun, with a mostly finished model (missing the carry handle). Updated Sniper Rifle silenced fire sound.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -7,6 +7,7 @@
 	"item.nzgmaddon.automatic_shotgun": "Automatic Shotgun",
 	"item.nzgmaddon.heavy_assault_rifle": "Heavy Assault Rifle",
 	"item.nzgmaddon.battle_rifle": "Battle Rifle",
+	"item.nzgmaddon.machine_gun": "Machine Gun",
 	"item.nzgmaddon.infantry_rifle": "Infantry Rifle",
 	"item.nzgmaddon.hunting_rifle": "Hunting Rifle",
 	"item.nzgmaddon.sniper_rifle": "Sniper Rifle",
