Added Russian (ru_ru) localization, courtesy of PortalRU. Corrected an incorrect item key in zh_cn.json. Increased ammo per reload cycle of the Machine Gun to 15. Updated Changelog to reflect upcoming 1.2.1 update with Russian localization.

--- a/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
 	"item.nzgmaddon.revolver": "左轮手枪",
-	"item.nzgmaddon.micro_smg": "微型冲锋枪",
+	"item.nzgmaddon.uzi": "微型冲锋枪",
 	"item.nzgmaddon.submachine_gun": "冲锋枪",
 	"item.nzgmaddon.hunting_shotgun": "狩猎霰弹枪",
 	"item.nzgmaddon.double_barreled_shotgun": "双管霰弹枪",
