--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -2,6 +2,7 @@
 	"item.nzgmaddon.revolver": "Revolver",
 	"item.nzgmaddon.uzi": "Micro SMG",
 	"item.nzgmaddon.submachine_gun": "Submachine Gun",
+	"item.nzgmaddon.rapid_smg": "Rapid SMG",
 	"item.nzgmaddon.hunting_shotgun": "Hunting Shotgun",
 	"item.nzgmaddon.double_barreled_shotgun": "Double Barreled Shotgun",
 	"item.nzgmaddon.automatic_shotgun": "Automatic Shotgun",
