--- a/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
@@ -1,33 +1,47 @@
 {
-	"item.nzgmaddon.revolver": "左轮手枪",
-	"item.nzgmaddon.uzi": "微型冲锋枪",
-	"item.nzgmaddon.submachine_gun": "冲锋枪",
-	"item.nzgmaddon.hunting_shotgun": "狩猎霰弹枪",
-	"item.nzgmaddon.double_barreled_shotgun": "双管霰弹枪",
+	"item.nzgmaddon.automatic_marksman_rifle": "自动精确射手步枪",
 	"item.nzgmaddon.automatic_shotgun": "自动霰弹枪",
-	"item.nzgmaddon.heavy_assault_rifle": "重型突击步枪",
 	"item.nzgmaddon.battle_rifle": "战斗步枪",
-	"item.nzgmaddon.machine_gun": "机枪",
-	"item.nzgmaddon.infantry_rifle": "步兵步枪",
+	"item.nzgmaddon.double_barreled_shotgun": "双管霰弹枪",
+	"item.nzgmaddon.heavy_assault_rifle": "重型突击步枪",
+	"item.nzgmaddon.hunting_shotgun": "狩猎霰弹枪",
 	"item.nzgmaddon.hunting_rifle": "狩猎步枪",
+	"item.nzgmaddon.infantry_rifle": "步兵步枪",
+	"item.nzgmaddon.machine_gun": "机枪",
+	"item.nzgmaddon.micro_smg": "微型冲锋枪",
+	"item.nzgmaddon.rapid_smg": "高射速冲锋枪",
+	"item.nzgmaddon.revolver": "左轮手枪",
 	"item.nzgmaddon.sniper_rifle": "狙击步枪",
-	
+	"item.nzgmaddon.submachine_gun": "冲锋枪",
+
 	"item.nzgmaddon.medium_bullet": "中型子弹",
 	
 	"item.nzgmaddon.extended_barrel": "加长枪管",
 	"item.nzgmaddon.flash_hider": "消焰器",
+	
 	"item.nzgmaddon.muzzle_brake": "枪口制退器",
-	"item.nzgmaddon.heavy_muzzle_brake": "重型枪口制退器",
-	
+
+	"item.nzgmaddon.ballistic_scope": "狙击瞄准镜",
 	"item.nzgmaddon.dot_sight": "红点瞄准镜",
-	"item.nzgmaddon.ballistic_scope": "狙击镜",
-	
-	"item.nzgmaddon.short_stock": "短枪托",
+
+	"item.nzgmaddon.carbine_stock": "卡宾枪枪托",
 	"item.nzgmaddon.dyeable_tactical_stock": "可染色战术枪托",
+	"item.nzgmaddon.marksman_stock": "精确射手枪托",
+	"item.nzgmaddon.short_stock": "短枪托",
 	"item.nzgmaddon.solid_stock": "实心枪托",
 	"item.nzgmaddon.stabilizing_stock": "稳定枪托",
-	"item.nzgmaddon.carbine_stock": "卡宾枪枪托",
-	"item.nzgmaddon.marksman_stock": "精确射手枪托",
 	
-	"item.nzgmaddon.horizontal_grip": "水平握把"
+	"item.nzgmaddon.horizontal_grip": "水平握把",
+
+	"_comment_guns": "尚未实装的枪械翻译",
+	"item.nzgmaddon.burst_rifle": "短点射步枪",
+	"item.nzgmaddon.bullpup_rifle": "无托步枪",
+	"item.nzgmaddon.classic_sniper_rifle": "经典型狙击步枪",
+	"item.nzgmaddon.heavy_pistol": "重型手枪",
+	"item.nzgmaddon.heavy_smg": "重型冲锋枪",
+	"item.nzgmaddon.tactical_sniper_rifle": "战术型狙击步枪",
+
+	"_comment_accessories": "尚未实装的配件翻译",
+	"item.nzgmaddon.heavy_muzzle_brake": "重型枪口制退器",
+	"item.nzgmaddon.micro_dot_scope": "微型红点瞄准镜"
 }
