Big push! Added Infantry Rifle as a fully functional weapon, complete with sounds and a model. Implemented the new Hunting Rifle (sans the new model, using a placeholder for now), and renamed the old Hunting Rifle to the Bolt Action Rifle. Many misc adjustments to models and sounds, especially for the unreleased guns.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -1,7 +1,8 @@
 {
-	"item.nzgmaddon.automatic_marksman_rifle": "Automatic Marksman Rifle",
 	"item.nzgmaddon.automatic_shotgun": "Automatic Shotgun",
+	"item.nzgmaddon.automatic_sniper_rifle": "Automatic Sniper Rifle",
 	"item.nzgmaddon.battle_rifle": "Battle Rifle",
+	"item.nzgmaddon.bolt_action_rifle": "Bolt Action Rifle",
 	"item.nzgmaddon.double_barreled_shotgun": "Double Barreled Shotgun",
 	"item.nzgmaddon.heavy_assault_rifle": "Heavy Assault Rifle",
 	"item.nzgmaddon.hunting_rifle": "Hunting Rifle",
