--- a/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
-	"item.nzgmaddon.automatic_marksman_rifle": "自动精确射手步枪",
 	"item.nzgmaddon.automatic_shotgun": "自动霰弹枪",
+	"item.nzgmaddon.automatic_sniper_rifle": "自动精确射手步枪",
 	"item.nzgmaddon.battle_rifle": "战斗步枪",
 	"item.nzgmaddon.double_barreled_shotgun": "双管霰弹枪",
 	"item.nzgmaddon.heavy_assault_rifle": "重型突击步枪",
