--- a/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
@@ -2,13 +2,14 @@
 	"item.nzgmaddon.automatic_shotgun": "自动霰弹枪",
 	"item.nzgmaddon.automatic_sniper_rifle": "自动精确射手步枪",
 	"item.nzgmaddon.battle_rifle": "战斗步枪",
+    "item.nzgmaddon.bolt_action_rifle": "栓动步枪",
 	"item.nzgmaddon.double_barreled_shotgun": "双管霰弹枪",
 	"item.nzgmaddon.heavy_assault_rifle": "重型突击步枪",
 	"item.nzgmaddon.hunting_rifle": "狩猎步枪",
 	"item.nzgmaddon.hunting_shotgun": "狩猎霰弹枪",
 	"item.nzgmaddon.infantry_rifle": "步兵步枪",
 	"item.nzgmaddon.machine_gun": "机枪",
-	"item.nzgmaddon.micro_smg": "微型冲锋枪",
+	"item.nzgmaddon.uzi": "微型冲锋枪",
 	"item.nzgmaddon.pump_shotgun": "泵动霰弹枪",
 	"item.nzgmaddon.rapid_smg": "高射速冲锋枪",
 	"item.nzgmaddon.revolver": "左轮手枪",
