Ported over pretty much all of the v1.3.0 additions and changes to the 1.18.2 branch.

--- a/src/main/resources/assets/nzgexpansion/lang/ja_jp.json
+++ b/src/main/resources/assets/nzgexpansion/lang/ja_jp.json
@@ -1,33 +1,37 @@
 {
-	"item.nzgexpansion.revolver": "リボルバー",
-	"item.nzgexpansion.micro_smg": "マイクロSMG",
-	"item.nzgexpansion.submachine_gun": "サブマシンガン",
-	"item.nzgexpansion.hunting_shotgun": "ハンティングショットガン",
-	"item.nzgexpansion.double_barreled_shotgun": "ダブルバレルショットガン",
 	"item.nzgexpansion.automatic_shotgun": "オートマチックショットガン",
-	"item.nzgexpansion.heavy_assault_rifle": "ヘビーアサルトライフル",
+    "item.nzgexpansion.automatic_sniper_rifle": "自動狙撃銃",
 	"item.nzgexpansion.battle_rifle": "バトルライフル",
-	"item.nzgexpansion.machine_gun": "マシンガン",
-	"item.nzgexpansion.infantry_rifle": "インファントリーライフル",
+    "item.nzgexpansion.bolt_action_rifle": "ボルトアクションライフル",
+	"item.nzgexpansion.double_barreled_shotgun": "ダブルバレルショットガン",
+	"item.nzgexpansion.heavy_assault_rifle": "ヘビーアサルトライフル",
 	"item.nzgexpansion.hunting_rifle": "ハンティングライフル",
+	"item.nzgexpansion.hunting_shotgun": "ハンティングショットガン",
+	"item.nzgexpansion.infantry_rifle": "インファントリーライフル",
+	"item.nzgexpansion.machine_gun": "マシンガン",
+	"item.nzgexpansion.micro_smg": "マイクロSMG",
+    "item.nzgexpansion.pump_shotgun": "ポンプショットガン",
+    "item.nzgexpansion.rapid_smg": "迅速なSMG",
+	"item.nzgexpansion.revolver": "リボルバー",
 	"item.nzgexpansion.sniper_rifle": "スナイパーライフル",
+	"item.nzgexpansion.submachine_gun": "サブマシンガン",
 	
 	"item.nzgexpansion.medium_bullet": "ミディアムバレット",
 	
 	"item.nzgexpansion.extended_barrel": "拡張バレル",
 	"item.nzgexpansion.flash_hider": "フラッシュハイダー",
 	"item.nzgexpansion.muzzle_brake": "マズルブレーキ",
-	"item.nzgexpansion.heavy_muzzle_brake": "ヘビーマズルブレーキ",
 	
-	"item.nzgexpansion.dot_sight": "ドットサイト",
 	"item.nzgexpansion.ballistic_scope": "バリスティックスコープ",
+    "item.nzgexpansion.chevron_scope": "シェブロンスコープ",
+	"item.nzgexpansion.dot_sight": "ドットサイト",
 	
-	"item.nzgexpansion.short_stock": "ショートストック",
+	"item.nzgexpansion.carbine_stock": "カービンストック",
 	"item.nzgexpansion.dyeable_tactical_stock": "タクティカルストック",
+	"item.nzgexpansion.marksman_stock": "マークスマンストック",
+	"item.nzgexpansion.short_stock": "ショートストック",
 	"item.nzgexpansion.solid_stock": "ソリッドストック",
 	"item.nzgexpansion.stabilizing_stock": "スタビライズストック",
-	"item.nzgexpansion.carbine_stock": "カービンストック",
-	"item.nzgexpansion.marksman_stock": "マークスマンストック",
 	
 	"item.nzgexpansion.horizontal_grip": "水平グリップ"
 }
