--- a/src/main/resources/assets/nzgexpansion/lang/ru_ru.json
+++ b/src/main/resources/assets/nzgexpansion/lang/ru_ru.json
@@ -1,33 +1,37 @@
 {
-	"item.nzgexpansion.revolver": "Револьвер",
-	"item.nzgexpansion.micro_smg": "Микро пистолет-пулемет",
-	"item.nzgexpansion.submachine_gun": "Автомат",
-	"item.nzgexpansion.hunting_shotgun": "Охотничий дробовик",
-	"item.nzgexpansion.double_barreled_shotgun": "Двуствольный дробовик",
 	"item.nzgexpansion.automatic_shotgun": "Автоматический дробовик",
-	"item.nzgexpansion.heavy_assault_rifle": "Тяжелая штурмовая винтовка",
+    "item.nzgexpansion.automatic_sniper_rifle": "Автоматическая снайперская винтовка",
 	"item.nzgexpansion.battle_rifle": "Боевая винтовка",
-	"item.nzgexpansion.machine_gun": "Пулемет",
-	"item.nzgexpansion.infantry_rifle": "Пехотная винтовка",
+    "item.nzgexpansion.bolt_action_rifle": "Винтовка с болтовым затвором",
+	"item.nzgexpansion.double_barreled_shotgun": "Двуствольный дробовик",
+	"item.nzgexpansion.heavy_assault_rifle": "Тяжелая штурмовая винтовка",
 	"item.nzgexpansion.hunting_rifle": "Охотничье ружье",
+	"item.nzgexpansion.hunting_shotgun": "Охотничий дробовик",
+	"item.nzgexpansion.infantry_rifle": "Пехотная винтовка",
+	"item.nzgexpansion.machine_gun": "Пулемет",
+	"item.nzgexpansion.micro_smg": "Микро пистолет-пулемет",
+    "item.nzgexpansion.pump_shotgun": "Помповый дробовик",
+    "item.nzgexpansion.rapid_smg": "Быстрый пистолет-пулемет",
+	"item.nzgexpansion.revolver": "Револьвер",
 	"item.nzgexpansion.sniper_rifle": "Снайперская винтовка",
-	
+	"item.nzgexpansion.submachine_gun": "Автомат",
+
 	"item.nzgexpansion.medium_bullet": "Средний патрон",
-	
+
 	"item.nzgexpansion.extended_barrel": "Удлиненный ствол",
 	"item.nzgexpansion.flash_hider": "Пламегаситель",
 	"item.nzgexpansion.muzzle_brake": "Дульный тормоз",
-	"item.nzgexpansion.heavy_muzzle_brake": "Тяжелый дульный тормоз",
-	
-	"item.nzgexpansion.dot_sight": "Коллиматорный прицел",
+
 	"item.nzgexpansion.ballistic_scope": "Баллистический прицел",
-	
-	"item.nzgexpansion.short_stock": "Короткая ложа",
+    "item.nzgexpansion.chevron_scope": "Шевронный прицел",
+	"item.nzgexpansion.dot_sight": "Коллиматорный прицел",
+
+	"item.nzgexpansion.carbine_stock": "Ложа карабина",
 	"item.nzgexpansion.dyeable_tactical_stock": "Тактическая ложа",
+	"item.nzgexpansion.marksman_stock": "Стрелковая ложа",
+	"item.nzgexpansion.short_stock": "Короткая ложа",
 	"item.nzgexpansion.solid_stock": "Твёрдая ложа",
 	"item.nzgexpansion.stabilizing_stock": "Стабилизирующая ложа",
-	"item.nzgexpansion.carbine_stock": "Ложа карабина",
-	"item.nzgexpansion.marksman_stock": "Стрелковая ложа",
-	
-	"item.nzgexpansion.horizontal_grip": "Горизонтальная рукоять"
+
+    "item.nzgexpansion.horizontal_grip": "Горизонтальная рукоять"
 }
