Changelog and en_us.json quick-fixes.

--- a/src/main/resources/assets/nzgexpansion/lang/en_us.json
+++ b/src/main/resources/assets/nzgexpansion/lang/en_us.json
@@ -9,7 +9,7 @@
 	"item.nzgexpansion.hunting_shotgun": "Hunting Shotgun",
 	"item.nzgexpansion.infantry_rifle": "Infantry Rifle",
 	"item.nzgexpansion.machine_gun": "Machine Gun",
-	"item.nzgexpansion.uzi": "Micro SMG",
+	"item.nzgexpansion.micro_smg": "Micro SMG",
 	"item.nzgexpansion.pump_shotgun": "Pump Shotgun",
 	"item.nzgexpansion.rapid_smg": "Rapid SMG",
 	"item.nzgexpansion.revolver": "Revolver",
