Add the Heavy Pistol and the new (animated!) model for the Revolver. Adjustments to the Stabilizing Stock - Improved ADS speed but increased spread.

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -5,6 +5,7 @@
 	"item.nzgmaddon.bolt_action_rifle": "Bolt Action Rifle",
 	"item.nzgmaddon.double_barreled_shotgun": "Double Barreled Shotgun",
 	"item.nzgmaddon.heavy_assault_rifle": "Heavy Assault Rifle",
+	"item.nzgmaddon.heavy_pistol": "Heavy Pistol",
 	"item.nzgmaddon.hunting_rifle": "Hunting Rifle",
 	"item.nzgmaddon.hunting_shotgun": "Hunting Shotgun",
 	"item.nzgmaddon.infantry_rifle": "Infantry Rifle",
