--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -6,6 +6,7 @@
 	"item.nzgmaddon.double_barreled_shotgun": "Double Barreled Shotgun",
 	"item.nzgmaddon.heavy_assault_rifle": "Heavy Assault Rifle",
 	"item.nzgmaddon.heavy_pistol": "Heavy Pistol",
+	"item.nzgmaddon.heavy_revolver": "Heavy Revolver",
 	"item.nzgmaddon.hunting_rifle": "Hunting Rifle",
 	"item.nzgmaddon.hunting_shotgun": "Hunting Shotgun",
 	"item.nzgmaddon.infantry_rifle": "Infantry Rifle",
