--- a/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
@@ -3,8 +3,10 @@
 	"item.nzgmaddon.automatic_sniper_rifle": "自动精确射手步枪",
 	"item.nzgmaddon.battle_rifle": "战斗步枪",
     "item.nzgmaddon.bolt_action_rifle": "栓动步枪",
+	"item.nzgmaddon.bullpup_rifle": "无托步枪",
 	"item.nzgmaddon.double_barreled_shotgun": "双管霰弹枪",
 	"item.nzgmaddon.heavy_assault_rifle": "重型突击步枪",
+	"item.nzgmaddon.heavy_pistol": "重型手枪",
 	"item.nzgmaddon.hunting_rifle": "狩猎步枪",
 	"item.nzgmaddon.hunting_shotgun": "狩猎霰弹枪",
 	"item.nzgmaddon.infantry_rifle": "步兵步枪",
