--- a/src/main/resources/assets/nzgmaddon/lang/ru_ru.json
+++ b/src/main/resources/assets/nzgmaddon/lang/ru_ru.json
@@ -3,9 +3,12 @@
   "item.nzgmaddon.automatic_sniper_rifle": "Автоматическая снайперская винтовка",
 	"item.nzgmaddon.battle_rifle": "Боевая винтовка",
   "item.nzgmaddon.bolt_action_rifle": "Винтовка с болтовым затвором",
+	"item.nzgmaddon.bullpup_rifle": "Винтовка Буллпап",
+	"item.nzgmaddon.compact_smg": "Компактный пистолет-пулемёт",
 	"item.nzgmaddon.double_barreled_shotgun": "Двуствольный дробовик",
 	"item.nzgmaddon.heavy_assault_rifle": "Тяжёлая штурмовая винтовка",
 	"item.nzgmaddon.heavy_pistol": "Тяжёлый пистолет",
+	"item.nzgmaddon.heavy_revolver": "Тяжёлый револьвер",
 	"item.nzgmaddon.hunting_rifle": "Охотничья винтовка",
 	"item.nzgmaddon.hunting_shotgun": "Охотничий дробовик",
 	"item.nzgmaddon.infantry_rifle": "Пехотная винтовка",
@@ -22,6 +25,8 @@
 	"item.nzgmaddon.extended_barrel": "Удлинённый ствол",
 	"item.nzgmaddon.flash_hider": "Пламегаситель",
 	"item.nzgmaddon.muzzle_brake": "Дульный тормоз",
+	"item.nzgmaddon.improved_silencer": "Улучшенный глушитель",
+	"item.nzgmaddon.performance_silencer": "Высокопроизводительный глушитель",
 
 	"item.nzgmaddon.ballistic_scope": "Баллистический прицел",
   "item.nzgmaddon.chevron_scope": "Шевронный прицел",
