--- a/src/main/resources/assets/nzgmaddon/lang/ru_ru.json
+++ b/src/main/resources/assets/nzgmaddon/lang/ru_ru.json
@@ -36,7 +36,7 @@
 	"item.nzgmaddon.dyeable_tactical_stock": "Тактическая ложа",
 	"item.nzgmaddon.marksman_stock": "Стрелковая ложа",
 	"item.nzgmaddon.short_stock": "Короткая ложа",
-	"item.nzgmaddon.solid_stock": "Твёрдая ложа",
+	"item.nzgmaddon.solid_stock": "Цельная ложа",
 	"item.nzgmaddon.stabilizing_stock": "Стабилизирующая ложа",
 
 	"item.nzgmaddon.horizontal_grip": "Горизонтальная рукоять"
