Added a custom Creative Mode inventory tab for NZGE! Localization keys for the creative tab are all in English pending new translations. Stat modifier tweaks across the board for almost every attachment, generally reducing ADS speed penalties. Reduced the fire rate penalty of the Marksman Stock to one extra tick - penalty is no longer a multiplier. These changes are planned to be pushed with v1.4.4, to match the release versions for MC 1.19.3/.4

--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgmaddon": "NineZero's Gun Expansion",
+	
 	"item.nzgmaddon.automatic_shotgun": "Automatic Shotgun",
 	"item.nzgmaddon.automatic_sniper_rifle": "Automatic Sniper Rifle",
 	"item.nzgmaddon.battle_rifle": "Battle Rifle",
