--- a/src/main/resources/assets/nzgmaddon/lang/ja_jp.json
+++ b/src/main/resources/assets/nzgmaddon/lang/ja_jp.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgmaddon": "NineZero's Gun Expansion",
+	
 	"item.nzgmaddon.automatic_shotgun": "オートマチックショットガン",
     "item.nzgmaddon.automatic_sniper_rifle": "自動狙撃銃",
 	"item.nzgmaddon.battle_rifle": "バトルライフル",
