--- a/src/main/resources/assets/nzgmaddon/lang/ko_kr.json
+++ b/src/main/resources/assets/nzgmaddon/lang/ko_kr.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgmaddon": "NineZero's Gun Expansion",
+	
 	"item.nzgmaddon.automatic_shotgun": "자동 산탄총",
 	"item.nzgmaddon.automatic_sniper_rifle": "자동 저격소총",
 	"item.nzgmaddon.battle_rifle": "전투용 소총",
