--- a/src/main/resources/assets/nzgmaddon/lang/ru_ru.json
+++ b/src/main/resources/assets/nzgmaddon/lang/ru_ru.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgmaddon": "NineZero's Gun Expansion",
+	
 	"item.nzgmaddon.automatic_shotgun": "Автоматический дробовик",
 	"item.nzgmaddon.automatic_sniper_rifle": "Автоматическая снайперская винтовка",
 	"item.nzgmaddon.battle_rifle": "Стрелковая винтовка",
