--- a/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgmaddon/lang/zh_cn.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgmaddon": "NineZero's Gun Expansion",
+	
 	"item.nzgmaddon.automatic_shotgun": "自动霰弹枪",
 	"item.nzgmaddon.automatic_sniper_rifle": "自动精确射手步枪",
 	"item.nzgmaddon.battle_rifle": "战斗步枪",
