--- a/src/main/resources/assets/nzgexpansion/lang/ja_jp.json
+++ b/src/main/resources/assets/nzgexpansion/lang/ja_jp.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgexpansion": "NineZero's Gun Expansion",
+	
 	"item.nzgexpansion.automatic_shotgun": "オートマチックショットガン",
     "item.nzgexpansion.automatic_sniper_rifle": "自動狙撃銃",
 	"item.nzgexpansion.battle_rifle": "バトルライフル",
