--- a/src/main/resources/assets/nzgexpansion/lang/ko_kr.json
+++ b/src/main/resources/assets/nzgexpansion/lang/ko_kr.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgexpansion": "NineZero's Gun Expansion",
+	
 	"item.nzgexpansion.automatic_shotgun": "자동 산탄총",
 	"item.nzgexpansion.automatic_sniper_rifle": "자동 저격소총",
 	"item.nzgexpansion.battle_rifle": "전투용 소총",
