--- a/src/main/resources/assets/nzgexpansion/lang/ru_ru.json
+++ b/src/main/resources/assets/nzgexpansion/lang/ru_ru.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgexpansion": "NineZero's Gun Expansion",
+	
 	"item.nzgexpansion.automatic_shotgun": "Автоматический дробовик",
 	"item.nzgexpansion.automatic_sniper_rifle": "Автоматическая снайперская винтовка",
 	"item.nzgexpansion.battle_rifle": "Стрелковая винтовка",
