--- a/src/main/resources/assets/nzgexpansion/lang/zh_cn.json
+++ b/src/main/resources/assets/nzgexpansion/lang/zh_cn.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.nzgexpansion": "NineZero's Gun Expansion",
+	
 	"item.nzgexpansion.automatic_shotgun": "自动霰弹枪",
 	"item.nzgexpansion.automatic_sniper_rifle": "自动精确射手步枪",
 	"item.nzgexpansion.battle_rifle": "战斗步枪",
