--- a/src/main/resources/assets/nzgmaddon/lang/en_us.json
+++ b/src/main/resources/assets/nzgmaddon/lang/en_us.json
@@ -4,7 +4,7 @@
 	"item.nzgmaddon.automatic_shotgun": "Automatic Shotgun",
 	"item.nzgmaddon.automatic_sniper_rifle": "Automatic Sniper Rifle",
 	"item.nzgmaddon.battle_rifle": "Battle Rifle",
-	"item.nzgmaddon.bolt_action_rifle": "Bolt Action Rifle",
+	"item.nzgmaddon.bolt_action_rifle": "Bolt-Action Rifle",
 	"item.nzgmaddon.bullpup_rifle": "Bullpup Rifle",
 	"item.nzgmaddon.compact_smg": "Compact SMG",
 	"item.nzgmaddon.double_barreled_shotgun": "Double Barreled Shotgun",
